--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
     {{#if showTests}}
         <link rel="stylesheet" href="/vendor/mocha.css">
     {{/if}}
-    <script src="//code/jquery.com/jquery-2.0.2.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+
   </head>
 
   <body>
@@ -18,7 +19,7 @@
       <script src="/vendor/chai.js"></script>
       <script>
           mocha.ui('tdd');
-          var.assert = chai.assert;
+          var assert = chai.assert;
       </script>
       <!-- tests to be ran on every page !-->
       <script src="/qa/tests-global.js"></script>
